# kiez-benchmarking

./: README.md  noxfile.py  pyproject.toml
.github/workflows/: quality.yml
configs/ball_tree/: experiment_config_AliNet_ball_tree.yaml  experiment_config_AliNet_large_ball_tree.yaml  experiment_config_AttrE_ball_tree.yaml  experiment_config_AttrE_large_ball_tree.yaml  experiment_config_BootEA_ball_tree.yaml  experiment_config_BootEA_large_ball_tree.yaml  experiment_config_ConvE_ball_tree.yaml  experiment_config_ConvE_large_ball_tree.yaml  experiment_config_GCN_Align_ball_tree.yaml  experiment_config_GCN_Align_large_ball_tree.yaml  experiment_config_HolE_ball_tree.yaml  experiment_config_HolE_large_ball_tree.yaml  experiment_config_IMUSE_ball_tree.yaml  experiment_config_IMUSE_large_ball_tree.yaml  experiment_config_IPTransE_ball_tree.yaml  experiment_config_IPTransE_large_ball_tree.yaml  experiment_config_JAPE_ball_tree.yaml  experiment_config_JAPE_large_ball_tree.yaml  experiment_config_MTransE_ball_tree.yaml  experiment_config_MTransE_large_ball_tree.yaml  experiment_config_ProjE_ball_tree.yaml  experiment_config_ProjE_large_ball_tree.yaml  experiment_config_RDGCN_ball_tree.yaml  experiment_config_RDGCN_large_ball_tree.yaml  experiment_config_RSN4EA_ball_tree.yaml  experiment_config_RSN4EA_large_ball_tree.yaml  experiment_config_RotatE_ball_tree.yaml  experiment_config_RotatE_large_ball_tree.yaml  experiment_config_SEA_ball_tree.yaml  experiment_config_SEA_large_ball_tree.yaml  experiment_config_SimplE_ball_tree.yaml  experiment_config_SimplE_large_ball_tree.yaml  experiment_config_TransD_ball_tree.yaml  experiment_config_TransD_large_ball_tree.yaml  experiment_config_TransH_ball_tree.yaml  experiment_config_TransH_large_ball_tree.yaml  experiment_config_TransR_ball_tree.yaml  experiment_config_TransR_large_ball_tree.yaml  experiment_config_large_ball_tree.yaml
configs/brute/: experiment_config_AliNet_brute.yaml  experiment_config_AliNet_large_brute.yaml  experiment_config_AttrE_brute.yaml  experiment_config_AttrE_large_brute.yaml  experiment_config_BootEA_brute.yaml  experiment_config_BootEA_large_brute.yaml  experiment_config_ConvE_brute.yaml  experiment_config_ConvE_large_brute.yaml  experiment_config_GCN_Align_brute.yaml  experiment_config_GCN_Align_large_brute.yaml  experiment_config_HolE_brute.yaml  experiment_config_HolE_large_brute.yaml  experiment_config_IMUSE_brute.yaml  experiment_config_IMUSE_large_brute.yaml  experiment_config_IPTransE_brute.yaml  experiment_config_IPTransE_large_brute.yaml  experiment_config_JAPE_brute.yaml  experiment_config_JAPE_large_brute.yaml  experiment_config_MTransE_brute.yaml  experiment_config_MTransE_large_brute.yaml  experiment_config_ProjE_brute.yaml  experiment_config_ProjE_large_brute.yaml  experiment_config_RDGCN_brute.yaml  experiment_config_RDGCN_large_brute.yaml  experiment_config_RSN4EA_brute.yaml  experiment_config_RSN4EA_large_brute.yaml  experiment_config_RotatE_brute.yaml  experiment_config_RotatE_large_brute.yaml  experiment_config_SEA_brute.yaml  experiment_config_SEA_large_brute.yaml  experiment_config_SimplE_brute.yaml  experiment_config_SimplE_large_brute.yaml  experiment_config_TransD_brute.yaml  experiment_config_TransD_large_brute.yaml  experiment_config_TransH_brute.yaml  experiment_config_TransH_large_brute.yaml  experiment_config_TransR_brute.yaml  experiment_config_TransR_large_brute.yaml  experiment_config_large_brute.yaml
configs/hnsw/: experiment_config_AliNet_hnsw.yaml  experiment_config_AliNet_large_hnsw.yaml  experiment_config_AttrE_hnsw.yaml  experiment_config_AttrE_large_hnsw.yaml  experiment_config_BootEA_hnsw.yaml  experiment_config_BootEA_large_hnsw.yaml  experiment_config_ConvE_hnsw.yaml  experiment_config_ConvE_large_hnsw.yaml  experiment_config_GCN_Align_hnsw.yaml  experiment_config_GCN_Align_large_hnsw.yaml  experiment_config_HolE_hnsw.yaml  experiment_config_HolE_large_hnsw.yaml  experiment_config_IMUSE_hnsw.yaml  experiment_config_IMUSE_large_hnsw.yaml  (+26 more)
kiezbenchmarking/: create_plots.py  create_report.py  experiment.py  modified_autorank.py  seml_experiment.py
results/: max_all.csv
(+119 files in other folders)
