[tool.poetry]
name = "kiezbenchmarking"
version = "0.1.0"
description = "Benchmarking hubness reduced nearest neighbor search for entity alignment with knowledge graph embeddings"
authors = ["Daniel Obraczka <obraczka@informatik.uni-leipzig.de>"]
license = "BSD3"

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.1"
joblib = "^1.0.0"
numpy = "^1.20.0"
tqdm = "^4.56.0"
autorank = "^1.1.1"
seaborn = "^0.11.1"
pymongo = "^3.11.3"
black = "^20.8b1"
isort = "^5.7.0"
kiez = {git = "https://github.com/dobraczka/kiez", tag = "paper-experiments"}
ipdb = "^0.13.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[flake8]
ignore = "E203, E266, E501, W503, F403, F401"
max-line-length = 80
max-complexity = 18
select = "B,C,E,F,W,T4,B9"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flakehell]
format = "grouped"
extended_default_ignore=[]

[tool.flakehell.plugins]
pyflakes = ["+*"]
flake8-bugbear = ["+*"]
flake8-simplify = ["+*"]
pep8-naming = ["+*"]
