[tool.poetry]
name = "kiezbenchmarking"
version = "0.1.0"
description = "Benchmarking hubness reduced nearest neighbor search for entity alignment with knowledge graph embeddings"
authors = ["Daniel Obraczka <obraczka@informatik.uni-leipzig.de>"]
license = "BSD3"

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.1"
joblib = "^1.0.0"
numpy = "^1.20.0"
tqdm = "^4.56.0"
autorank = "^1.1.1"
seaborn = "^0.11.1"
pymongo = "^3.11.3"
faiss-cpu = "^1.7.1"
faiss-gpu = "^1.7.1"
autofaiss = "^2.4.0"
kiez = {git = "https://github.com/dobraczka/kiez", branch = "gpu-based"}

[tool.poetry.dev-dependencies]
ipdb = "~0.13"
mypy = "~0.800"
pytest = "~6.2.2"
pytest-cov = "~2.11.1"
pyproject-flake8 = "~0.0.1-alpha.2"
flake8-eradicate = "~1.2.0"
flake8-isort = "~4.1.0"
flake8-debugger = "~4.0.0"
flake8-comprehensions = "~3.7.0"
flake8-print = "~4.0.0"
nox-poetry = "~0.9.0"
black = "^21.11b1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = "E203, E266, E501, W503, F403, F401, B950"
max-line-length = 88
max-complexity = 18
select = "B,C,E,F,W,T4,B9"
count = "true"
show-source = "true"
statistics = "true"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
