[tool.poetry]
name = "kiezbenchmarking"
version = "0.1.0"
description = "Benchmarking hubness reduced nearest neighbor search for entity alignment with knowledge graph embeddings"
authors = ["Daniel Obraczka <obraczka@informatik.uni-leipzig.de>"]
license = "BSD3"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pandas = "^1.2.1"
joblib = "^1.2.0"
numpy = "^1.21.0"
tqdm = "^4.56.0"
pymongo = "^3.11.3"
faiss-cpu = "^1.7.1"
faiss-gpu = "^1.7.1"
autofaiss = "^2.4.0"
kiez = {extras = ["all"], version = "^0.4.1"}
seaborn = "^0.11.2"
matplotlib = "^3.5.1"
autorank = "^1.1.2"
click = "^8.1.3"
pystow = "^0.4.6"
sylloge = "^0.1.0"
pendulum = "^2.1.2"
wandb = "^0.13.4"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
mypy = "^0.960"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pyproject-flake8 = "^0.0.1a4"
flake8-eradicate = "^1.2.1"
flake8-isort = "^4.1.1"
flake8-debugger = "^4.1.2"
flake8-comprehensions = "^3.10.0"
flake8-print = "^5.0.0"
nox-poetry = "^1.0.0"
black = "^22.3.0"
pytest-mock = "^3.7.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = "E203, E266, E501, W503, F403, F401, B950, C408"
max-line-length = 88
max-complexity = 18
select = "B,C,E,F,W,T4,B9"
count = "true"
show-source = "true"
statistics = "true"

[tool.black]
line-length = 88
experimental-string-processing = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
